# better-steamlib

./: .gitignore  CMakeLists.txt  LICENSE  Project Plan.odt  Project Qt porting.odt  README.md
cli/: CMakeLists.txt
cli/include/: cli_parser.h  cli_types.h  printer.h  style.h
cli/src/: cli_types.cpp  main.cpp  printer.cpp
core/: CMakeLists.txt
core/include/: api_client.h  cache.h  game.h  gamemanager.h  igamelibrary.h  steam_parser.h
core/src/: api_client.cpp  cache.cpp  gamemanager.cpp  steam_parser.cpp
gui/: CMakeLists.txt
gui/include/: gametreemodel.h  mainwindow.h
gui/src/: gametreemodel.cpp  mainwindow.cpp
include/: api_client.h  cache.h  cli_parser.h  cli_types.h  game.h  igamelibrary.h  printer.h  steam_parser.h  style.h
src/: api_client.cpp  cache.cpp  cli_parser.cpp  cli_types.cpp  main.cpp  printer.cpp  steam_parser.cpp
